# GithubAnalyzer

./: .cursorrules  .cursorrules.md  .gitignore  .pdm-python  .pre-commit-config.yaml  .pylintrc  @fish-node-types.json  CONTRIBUTING.md  README.md  analyze_fish_ast.py  analyze_julia.py  analyze_solidity_ast.py  analyze_verilog_ast.py  cli.py  conftest.py  edited_tree.dot  embeddable_files.txt  final_tree.dot  initial_tree.dot  language_patterns.py  main.py  parser_dependencies.puml  pyproject.toml  pytest.ini  query_patterns.py  requirements.txt  setup.cfg  setup.py  solidity-node-types.json  test_fish_direct.py  tree-sitter-cmake-build.py  verilog-node-types.json  version.py
@query_function_results/: ada_functions.json  bash_functions.json  c_functions.json  clojure_functions.json  commonlisp_functions.json  cpp_functions.json  dart_functions.json  elixir_functions.json  elm_functions.json  erlang_functions.json  fish_functions.json  gdscript_functions.json  gleam_functions.json  go_functions.json  groovy_functions.json  hack_functions.json  haskell_functions.json  haxe_functions.json  html_comment.json  html_document.json  html_element.json  java_functions.json  javascript_functions.json  julia_functions.json  kotlin_functions.json  lua_functions.json  php_functions.json  powershell_functions.json  purescript_functions.json  python_functions.json  r_functions.json  racket_functions.json  ruby_functions.json  rust_functions.json  scala_functions.json  solidity_functions.json  squirrel_functions.json  swift_functions.json  tcl_functions.json  typescript_functions.json  (+2 more)
GithubAnalyzer/: __init__.py  main.py  version.py
GithubAnalyzer/agents/: __init__.py  ai_agent_cli.py  ai_agent_enhanced.py
GithubAnalyzer/config/: config.py  settings.py  validator.py
GithubAnalyzer/core/: __init__.py  code_analyzer.py  code_parser.py  context_enhanced.py  context_manager.py  custom_parsers.py  database_utils.py  discover_files.py  documentation_analyzer.py  embeddings.py  error_handler.py  framework_analyzers.py  graph_embeddings.py  models.py  query_processor.py  registry.py  tree_sitter_parser.py  (+3 more)
docker/: Dockerfile  docker-compose.yml
docs/: README.md  cli_commands.txt  commands.txt  commonlisp-node-types.json  continueConversation.txt  cpp-node-types.json  dbinfo.txt  erlang-node-types.json  example-unpacking.py  fish-node-types.json  gd-node-types.json  gleam-node-types.json  hack-node-types.json  html-node-types.json  language_definitions.json  project_flow_guide.md  project_structure.md  project_structure.puml  python-grammar.txt  remaingQueryFail.txt  solidity-node-types.json  structureShould.txt  tcl-node-types.json  test_flow.md  tools.md  tree-siiter_docs.txt  tree-sitter notes  tree-sitter_notes.txt  tsStringCommentExample.txt  zig-node-type.json
n8n_data/: config
ollama/: Modelfile
project_config/: models.yaml  services.yaml
queries/: groovy_functions.scm  racket_functions.scm
requirements/: test.txt
scripts/: build_languages.py  build_tree_sitter.py  dev_setup.py
src/: main.py
tests/: __init__.py  analyze_cpp_ast.py  conftest.py  requirements-test.txt  run_tests.py  setup_test_env.py  test_ai_agent_cli.py  test_code_parser.py  test_custom_parsers.py  test_html_queries.py
(+481 files in other folders)
