[project]
name = "GithubAnalyzer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zmaroo", email = "marlermi@hotmail.com"},
]
dependencies = [
    "python-json-logger>=2.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
