[project]
name = "GithubAnalyzer"
version = "0.1.0"
description = "GitHub code analysis tool"
authors = [
    {name = "Zmaroo", email = "marlermi@hotmail.com"},
]
dependencies = [
    "python-json-logger>=2.0.0",
    "PyYAML>=6.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack==0.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"
addopts = "-v --cov=src.GithubAnalyzer --cov-report=term-missing"

[tool.coverage.run]
source = ["src/GithubAnalyzer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
