[project]
name = "GithubAnalyzer"
version = "0.1.0"
description = "GitHub code analysis tool"
authors = [
    {name = "Zmaroo", email = "marlermi@hotmail.com"},
]
dependencies = [
    "python-json-logger>=2.0.0",
    "PyYAML>=6.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack==0.2.0",
    "psutil>=6.1.1",
    "psycopg2-binary>=2.9.10",
    "neo4j>=5.27.0",
    "python-dotenv>=1.0.1",
    "transformers>=4.48.1",
    "torch>=2.5.1",
    "pgvector>=0.3.6",
    "gitpython>=3.1.44",
    "toml>=0.10.2",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-v --cov=src.GithubAnalyzer --cov-report=term-missing"

[tool.coverage.run]
source = ["src/GithubAnalyzer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.2.0",
]
test = [
    "pytest",
    "pytest-cov>=6.0.0",
    "tree-sitter",
    "tree-sitter-language-pack",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
